Fix z-index to the common class with Integrations

--- a/source/assets/stylesheets/components/_sub-navbar.scss
+++ b/source/assets/stylesheets/components/_sub-navbar.scss
@@ -9,7 +9,7 @@
   }
   
   @include media-breakpoint-up(lg) {
-    z-index: $zindex-fixed + 1;
+    z-index: $zindex-fixed - 1;
     position: sticky;
   }
   
